# cse230-final-project

./: .gitignore  LICENSE  Makefile  README.md  elsa.cabal  stack.yaml
levels/: level1.txt  level2.txt
src/: Env.hs  MyCharacter.hs  Parse.hs  Types.hs  UI.hs
test/: Constants.hs  Test.hs
