name:                elsa
version:             0.1.0.0
homepage:            https://github.com/leungcyw/cse230-final-project
license:             MIT
license-file:        LICENSE
author:              Eric Ke, Christina Leung, Yiming Zhao
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable elsa
  hs-source-dirs:      src
  other-modules:       Env
                     , UI
                     , Types
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base         >= 4.7 && < 5
                     , brick
                     , containers
                     , extra
                     , linear
                     , lens
                     , random
                     , transformers
                     , vty