name:                elsa
version:             0.1.0.0
homepage:            https://github.com/leungcyw/cse230-final-project
license:             MIT
license-file:        LICENSE
author:              Eric Ke, Christina Leung, Yiming Zhao
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable elsa
  hs-source-dirs:      src
  other-modules:       Env
                     , UI
                     , Types
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base         >= 4.7 && < 5
                     , brick
                     , containers
                     , extra
                     , linear
                     , lens
                     , random
                     , transformers
                     , vty

Library
  hs-source-dirs:      src
  exposed-modules:       Env
                     , UI
                     , Types
  default-language:    Haskell2010
  build-depends:       base         >= 4.7 && < 5
                     , brick
                     , containers
                     , extra
                     , linear
                     , lens
                     , random
                     , transformers
                     , vty

test-suite test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  Default-Extensions: OverloadedStrings
  default-language: Haskell98
  main-is:          Test.hs
  build-depends:    base
                   ,filepath
                  , directory
                  , QuickCheck
                  , tasty
                  , tasty-hunit
                  , tasty-quickcheck
                  , process
                  , brick
                  , containers
                  , extra
                  , linear
                  , lens
                  , random
                  , transformers
                  , vty
                  , elsa
  other-modules:    Common
                  , Constants